--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 html {
     scroll-behavior: smooth;
 }
+
 body, h1, h2, p {
     margin: 0;
     padding: 0;
@@ -40,6 +41,7 @@ nav {
 
 nav .site-name {
     margin: 0;
+    z-index: 100;
 }
 
 nav .site-name h1 {
@@ -143,15 +145,55 @@ nav ul li a {
 }
 
 .image-extra {
-    position: absolute; /* Or use `fixed` if you want it to stay fixed relative to the viewport */
-    width: 400px; /* Set a width */
-    height: auto; /* Maintain aspect ratio */
-    /* z-index: 10;  */
+    position: absolute; 
+    width: 400px; 
+    height: auto;
 }
-/* Footer */
+
 footer {
     background: #333;
     color: #fff;
     text-align: center;
     padding: 10px 0;
+}
+
+@keyframes fadeInBounce {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    60% {
+        opacity: 1;
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+.fade-in-bounce {
+    opacity: 0; 
+    animation: fadeInBounce 1s ease-out forwards; 
+}
+
+.info {
+    transition: opacity 0.5s ease-in-out;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fade-in-up {
+    opacity: 0;
+    animation: fadeInUp 1s ease-out forwards; 
 }
